welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:8: error: type mismatch;
 found   : Unit
 required: Boolean
    if (c > b){
    ^inOrder:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (bOk == true){
  ^